# smart_car_buying_assistant_v1_crewai-project

./: API_KEY_SETUP_GUIDE.md  ERROR_FIXES_SUMMARY.md  README.md  SETUP_GUIDE.md  UI_ERROR_FIXES.md  WEBSITE_README.md  WEBSITE_SUMMARY.md  app.py  check_api_keys.py  check_status.py  debug_website.py  env_template.txt  pyproject.toml  requirements.txt  run_website.py  test_website.py
src/smart_car_buying_assistant/: crew.py  crew_robust.py  crew_simple.py  main.py
src/smart_car_buying_assistant/config/: agents.yaml  tasks.yaml
templates/: index.html  results.html
